# hashavatar-api

./: .dockerignore  .gitignore  CLOUDFLARE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.split-template  DEPLOYMENT-HETZNER.md  Dockerfile  LICENSE  PROVENANCE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  deny.toml
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  images.yml
config/: locales.toml
config/i18n/keys/: af-ZA.toml  am-ET.toml  ar-001.toml  az-AZ.toml  be-BY.toml  bg-BG.toml  bn-IN.toml  bs-BA.toml  ca-ES.toml  ckb-IQ.toml  cs-CZ.toml  cy-GB.toml  da-DK.toml  de-DE.toml  el-GR.toml  en-EU.toml  en-GB.toml  en-US.toml  eo-001.toml  es-ES.toml  et-EE.toml  eu-ES.toml  fa-IR.toml  fi-FI.toml  fil-PH.toml  fr-FR.toml  fy-NL.toml  ga-IE.toml  gl-ES.toml  gsw-CH.toml  gu-IN.toml  ha-NG.toml  he-IL.toml  hi-IN.toml  hr-HR.toml  hu-HU.toml  hy-AM.toml  id-ID.toml  ig-NG.toml  is-IS.toml  (+63 more)
deploy/: Caddyfile  README.md  fluxheim.toml  podman-compose.yml
docs/: SECURITY_CONTROLS.md
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.1.0-release.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md
scripts/: check-doc-links.pl  checks.sh  generate-sbom.sh  podman_smoke.sh  reproducible_build_check.sh  smoke_local.sh  stable_release_gate.sh  validate-release-metadata.sh  validate-security-invariants.sh
src/: main.rs
