[package]
name = "hashavatar-api"
version = "1.0.2"
edition = "2024"
rust-version = "1.96"
description = "Public avatar API and landing page for hashavatar"
license = "EUPL-1.2"
repository = "https://github.com/valkyoth/hashavatar-api"
homepage = "https://github.com/valkyoth/hashavatar-api"
documentation = "https://github.com/valkyoth/hashavatar-api"

[dependencies]
aws-config = { version = "1.8.17", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.134.0", default-features = false, features = ["rt-tokio", "sigv4a"] }
hashavatar = "1.0.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "query", "json"] }
getrandom = { version = "0.4.2", default-features = false }
ipnet = { version = "2.12.0", default-features = false }
lru = { version = "0.18.0", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
